<<<<<<< Updated upstream
[gd_scene load_steps=0 format=3 uid="uid://b82clfbwrg74c"]
=======
[gd_scene load_steps=55 format=3 uid="uid://b82clfbwrg74c"]
>>>>>>> Stashed changes

[ext_resource type="Script" uid="uid://p74nh1yyw66c" path="res://node_2d.gd" id="1_wtcfe"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_y32ns"]
load_path = "res://.godot/imported/Enemy3-SmashEnd.png-0a3a258be1eb5c0a43d1b32606ac1ab9.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_rj586"]
atlas = SubResource("CompressedTexture2D_y32ns")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d7sh"]
atlas = SubResource("CompressedTexture2D_y32ns")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir8iy"]
atlas = SubResource("CompressedTexture2D_y32ns")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqns4"]
atlas = SubResource("CompressedTexture2D_y32ns")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ka3"]
atlas = SubResource("CompressedTexture2D_y32ns")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h7mo"]
atlas = SubResource("CompressedTexture2D_y32ns")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr8wp"]
atlas = SubResource("CompressedTexture2D_y32ns")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2bti"]
atlas = SubResource("CompressedTexture2D_y32ns")
region = Rect2(448, 0, 64, 64)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wtcfe"]
load_path = "res://.godot/imported/Enemy3-Die.png-ba951f2a030be58837b4cd77ddf5c718.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_d21ai"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_540hr"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ip5v"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5dlx"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4wnb"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7plk7"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbwgr"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mj2a"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fshgd"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbrxf"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjt7e"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xo8l"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfyss"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ngjr"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qilgh"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qosj"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjlbh"]
atlas = SubResource("CompressedTexture2D_wtcfe")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0e48y"]
load_path = "res://.godot/imported/Enemy3-Fly.png-a3355c0fba421a524ade5540dac7f68f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ta5nu"]
atlas = SubResource("CompressedTexture2D_0e48y")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flf07"]
atlas = SubResource("CompressedTexture2D_0e48y")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k73cj"]
atlas = SubResource("CompressedTexture2D_0e48y")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjqkl"]
atlas = SubResource("CompressedTexture2D_0e48y")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs4d3"]
atlas = SubResource("CompressedTexture2D_0e48y")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vxoj"]
atlas = SubResource("CompressedTexture2D_0e48y")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei405"]
atlas = SubResource("CompressedTexture2D_0e48y")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8dv2"]
atlas = SubResource("CompressedTexture2D_0e48y")
region = Rect2(448, 0, 64, 64)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_epypp"]
load_path = "res://.godot/imported/Enemy3-Hit.png-d56557fb0860a3a46c226cf1c2fd51fd.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_2nhjh"]
atlas = SubResource("CompressedTexture2D_epypp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjha6"]
atlas = SubResource("CompressedTexture2D_epypp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt76g"]
atlas = SubResource("CompressedTexture2D_epypp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fr6y"]
atlas = SubResource("CompressedTexture2D_epypp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0hol4"]
load_path = "res://.godot/imported/Enemy3-Idle.png-238ba3c1b36dccc9eb35df82dd48fc80.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_2hxjc"]
atlas = SubResource("CompressedTexture2D_0hol4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebxd8"]
atlas = SubResource("CompressedTexture2D_0hol4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u7jv"]
atlas = SubResource("CompressedTexture2D_0hol4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24dk6"]
atlas = SubResource("CompressedTexture2D_0hol4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mryly"]
atlas = SubResource("CompressedTexture2D_0hol4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq1c5"]
atlas = SubResource("CompressedTexture2D_0hol4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ornx7"]
atlas = SubResource("CompressedTexture2D_0hol4")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnnru"]
atlas = SubResource("CompressedTexture2D_0hol4")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kfelt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj586")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d7sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir8iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqns4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ka3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h7mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr8wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2bti")
}],
"loop": true,
"name": &"atack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d21ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_540hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ip5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5dlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4wnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7plk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbwgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mj2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fshgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbrxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjt7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xo8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfyss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ngjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qilgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qosj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjlbh")
}],
"loop": true,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta5nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flf07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k73cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjqkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs4d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vxoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei405")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8dv2")
}],
"loop": true,
"name": &"flying",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nhjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjha6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt76g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fr6y")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hxjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebxd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u7jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24dk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mryly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq1c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ornx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnnru")
}],
"loop": true,
"name": &"ide",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wtcfe"]
radius = 162.0
height = 418.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_epypp"]
radius = 21.0
height = 56.0

[node name="kaufland_taska" type="CharacterBody2D"]
script = ExtResource("1_wtcfe")

[node name="kaufland_taska_animace" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kfelt")
animation = &"atack"
autoplay = "ide"
frame_progress = 0.26988238

[node name="pole" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pole"]
light_mask = 2
visibility_layer = 2
position = Vector2(-1, 6)
rotation = 1.5707964
scale = Vector2(1, 1.5)
shape = SubResource("CapsuleShape2D_wtcfe")

[node name="hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 11)
shape = SubResource("CapsuleShape2D_epypp")

[connection signal="body_entered" from="pole" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="pole" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
